<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.comp304.mohammed.test1.Activity2">

    <TextView
        android:id="@+id/viewFirstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name" />
    <TextView
        android:id="@+id/viewLastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name" />
    <TextView
        android:id="@+id/viewPhoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number" />
    <TextView
        android:id="@+id/viewStreet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/street" />
    <TextView
        android:id="@+id/viewPostalCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/postal_code" />
    <TextView
        android:id="@+id/viewCity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/city" />

</LinearLayout>
