<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cc.mja.intentusesamplelab1.Activity1">

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_name"
        />
    <EditText
        android:id="@+id/editLastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_last_name" />
    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submit"
        android:text="@string/submit" >
    </Button>

</LinearLayout>
